Content type fix
